@@ -212,12 +212,11 @@ link:task-enabling-private-link.html["深入瞭解如何搭配Cloud Volumes ONTA
 
 === 安全性群組規則
 
-BlueXP會建立Azure安全性群組、其中包含Cloud Volumes ONTAP 了順利運作所需的傳入和傳出規則。您可能想要參照連接埠進行測試、或是想要使用自己的安全性群組。
+BlueXP 建立 Azure 安全性群組，其中包含 Cloud Volumes ONTAP 成功執行的入站和出站規則。  https://docs.netapp.com/us-en/bluexp-setup-admin/reference-ports-azure.html["檢視Connector的安全群組規則"^] 。
 
-適用於此功能的安全性群組 Cloud Volumes ONTAP 需要傳入和傳出規則。
+Cloud Volumes ONTAP 的 Azure 安全性群組需要開啟適當的連接埠以供節點之間進行內部通訊。  https://docs.netapp.com/us-en/ontap/networking/ontap_internal_ports.html["瞭解 ONTAP 內部連接埠"^] 。
 
-
-TIP: 正在尋找Connector的相關資訊？ https://docs.netapp.com/us-en/bluexp-setup-admin/reference-ports-azure.html["檢視Connector的安全群組規則"^]
+我們不建議修改預先定義的安全性群組或使用自訂安全群組。但是，如果必須這樣做，請注意，部署過程要求 Cloud Volumes ONTAP 系統在其自己的子網路內擁有完全存取權限。部署完成後，如果決定修改網路安全群組，請確保保持叢集連接埠和 HA 網路連接埠保持開放。這確保了 Cloud Volumes ONTAP 叢集內的無縫通訊（節點之間的任意通訊）。
 
 
 
